part1/9.ping-pong_log-output_sharedIngress/ping-pong_service.yml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-service
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 8080
